# Playing-with-Fractals

./: .gitignore  CMakeLists.txt  main.c  mlx42
src/: CMakeLists.txt  Mandelbrot  main.c
src/IO/: CMakeLists.txt  colors.c  colors.h  controls.c  controls.h  error.c  error.h
src/logic/: CMakeLists.txt  complex.c  complex.h  fractal.h  init_data.c  init_data.h  mandelbrot.c  mandelbrot.h
